--- a/characters.html
+++ b/characters.html
@@ -339,6 +339,163 @@
       </div>
     </section>
 
+    <!-- ANTAGONISTS DIVIDER -->
+    <section style="padding-top:60px; padding-bottom:0;">
+      <div style="font-family:var(--font-mono); font-size:10px; letter-spacing:0.3em; color:var(--blood); margin-bottom:12px; display:flex; align-items:center; gap:12px;"><span style="color:var(--dim);">//</span> CHAPTER 002 — NEW CHARACTERS</div>
+      <h2 style="font-family:var(--font-display); font-size:40px; font-weight:800; text-transform:uppercase; color:var(--dim); margin-bottom:4px;">The Opposition</h2>
+      <p style="font-size:15px; font-weight:300; color:var(--dim); margin-bottom:0;">Introduced in Chapter 002 — Overclock</p>
+    </section>
+
+    <!-- VAEL -->
+    <section style="padding-top:16px;" id="vael">
+      <div style="background:var(--surface); border:1px solid var(--border); border-left: 3px solid var(--blood); padding:60px;" class="fade-in">
+        <div style="display:flex; justify-content:space-between; align-items:flex-start; flex-wrap:wrap; gap:32px; margin-bottom:48px; padding-bottom:40px; border-bottom:1px solid var(--border);">
+          <div>
+            <div style="font-family:var(--font-mono); font-size:10px; letter-spacing:0.3em; color:var(--blood); margin-bottom:12px;">// ANTAGONIST · CHAPTER 002</div>
+            <h2 style="font-family:var(--font-display); font-size:72px; font-weight:800; text-transform:uppercase; line-height:1; color:#fff; margin-bottom:8px;">VAEL</h2>
+            <div style="font-family:var(--font-mono); font-size:14px; letter-spacing:0.2em; color:var(--blood);">THE DIRECTOR · MERIDIAN FIELD OPS</div>
+          </div>
+          <div style="text-align:right; font-family:var(--font-mono); font-size:11px; color:var(--dim); line-height:2;">
+            <div>AGE: 35</div>
+            <div>CLASS: REGISTERED — UNKNOWN · ACTUAL — UNKNOWN</div>
+            <div>ORIGIN: MERIDIAN CORP INTERNAL</div>
+            <div>STATUS: ACTIVE · PROJECT THRESHOLD</div>
+          </div>
+        </div>
+
+        <div style="display:grid; grid-template-columns:2fr 1fr; gap:60px; flex-wrap:wrap;">
+          <div>
+            <h3 style="font-family:var(--font-mono); font-size:10px; letter-spacing:0.3em; text-transform:uppercase; color:var(--dim); margin-bottom:20px; padding-bottom:8px; border-bottom:1px solid var(--ghost);">PROFILE</h3>
+            <p style="font-size:17px; font-weight:300; color:var(--pale); line-height:1.8; margin-bottom:24px;">
+              No last name in any Meridian corporate directory. Just Vael. Senior Field Director — the highest non-executive rank in Meridian's operational structure, which means he has near-unlimited resource authority and almost no reporting requirements. He has held this position for eight years. Nobody asks how he got it. The people who would have asked are no longer with the company.
+            </p>
+            <p style="font-size:17px; font-weight:300; color:var(--pale); line-height:1.8; margin-bottom:24px;">
+              The official record: non-Resonant. Standard human, elevated to his position through merit and decades of operational excellence. The file that Luca stole before leaving Meridian — the one he keeps in a lockbox and hasn't shown anyone yet — tells a different story. Vael's Echo classification is listed internally as <em>Misregistered — Deliberate.</em> Whatever he is, he chose to hide it. That decision was made before Meridian hired him, which means he came into this with a purpose already formed.
+            </p>
+            <p style="font-size:17px; font-weight:300; color:var(--pale); line-height:1.8; margin-bottom:40px;">
+              He is the architect of Project Threshold — the operation to use sequential Void inversions to activate the dormant fracture network. His stated objective to Meridian's board: a controlled opening of the Echo origin channel that gives the corporation exclusive access to deep-Void resources. His actual objective is something Meridian's board has not been briefed on. Vael is not, in the end, working for Meridian. He's working for something that predates it.
+            </p>
+
+            <h3 style="font-family:var(--font-mono); font-size:10px; letter-spacing:0.3em; text-transform:uppercase; color:var(--dim); margin-bottom:20px; padding-bottom:8px; border-bottom:1px solid var(--ghost);">WHAT MAKES HIM DANGEROUS</h3>
+            <p style="font-size:17px; font-weight:300; color:var(--pale); line-height:1.8; margin-bottom:16px;">
+              Vael is not a villain who monologues. He's a villain who is right about most things and wrong about the one thing that matters. His analysis of the fracture network is accurate. His understanding of Echo's nature is arguably more advanced than anyone alive. His methods — sealing Ashfield districts, triggering inversions, treating two hundred thousand unregistered lives as variables — are a logical conclusion of his correct analysis applied without any ethical weight.
+            </p>
+            <p style="font-size:17px; font-weight:300; color:var(--pale); line-height:1.8;">
+              He has a file on Kairo Vess that he compiled personally. He knew Kairo was Cognate-class before Kairo did. He ordered the third null test specifically to confirm the classification and bury it. He needs Kairo to open the network door — and he has spent eighteen months engineering circumstances that would deliver Kairo to exactly this moment, surrounded by exactly these people, with exactly the information needed. Whether Kairo cooperates or not is the only variable Vael hasn't solved.
+            </p>
+          </div>
+          <div>
+            <h3 style="font-family:var(--font-mono); font-size:10px; letter-spacing:0.3em; text-transform:uppercase; color:var(--dim); margin-bottom:20px; padding-bottom:8px; border-bottom:1px solid var(--ghost);">THREAT METRICS</h3>
+            <div class="ds-stat-block">
+              <div class="stat-bar">
+                <div class="stat-label"><span>Combat Threat</span><span>??/10</span></div>
+                <div class="stat-track"><div class="stat-fill red-fill" style="width:0%"></div></div>
+              </div>
+              <div class="stat-bar">
+                <div class="stat-label"><span>Strategic Threat</span><span>10/10</span></div>
+                <div class="stat-track"><div class="stat-fill red-fill" style="width:100%"></div></div>
+              </div>
+              <div class="stat-bar">
+                <div class="stat-label"><span>Information Control</span><span>10/10</span></div>
+                <div class="stat-track"><div class="stat-fill red-fill" style="width:100%"></div></div>
+              </div>
+              <div class="stat-bar">
+                <div class="stat-label"><span>Echo Knowledge</span><span>09/10</span></div>
+                <div class="stat-track"><div class="stat-fill red-fill" style="width:90%"></div></div>
+              </div>
+              <div class="stat-bar">
+                <div class="stat-label"><span>True Classification</span><span>REDACTED</span></div>
+                <div class="stat-track"><div class="stat-fill" style="width:100%; background:var(--ghost);"></div></div>
+              </div>
+            </div>
+
+            <h3 style="font-family:var(--font-mono); font-size:10px; letter-spacing:0.3em; text-transform:uppercase; color:var(--dim); margin-bottom:20px; padding-bottom:8px; border-bottom:1px solid var(--ghost); margin-top:40px;">SIGNATURE LINES</h3>
+            <div style="display:flex; flex-direction:column; gap:8px;">
+              <div style="font-family:var(--font-body); font-style:italic; font-size:15px; color:var(--blood); padding:12px; border-left:2px solid var(--blood);">"I don't make decisions about acceptable losses. I make decisions about outcomes. The losses are already in the math."</div>
+              <div style="font-family:var(--font-body); font-style:italic; font-size:15px; color:var(--blood); padding:12px; border-left:2px solid var(--blood);">"The door opens. The only question is who stands on which side when it does."</div>
+              <div style="font-family:var(--font-body); font-style:italic; font-size:15px; color:var(--blood); padding:12px; border-left:2px solid var(--blood);">"Kairo Vess is not a variable. He's the constant. Everything else I can adjust for."</div>
+            </div>
+
+            <h3 style="font-family:var(--font-mono); font-size:10px; letter-spacing:0.3em; text-transform:uppercase; color:var(--dim); margin-bottom:20px; padding-bottom:8px; border-bottom:1px solid var(--ghost); margin-top:40px;">OPEN QUESTIONS</h3>
+            <div style="font-size:14px; font-weight:300; color:var(--pale); line-height:1.8;">
+              <div style="padding:10px 0; border-bottom:1px solid var(--ghost);">What is Vael's actual Echo classification — and why hide it?</div>
+              <div style="padding:10px 0; border-bottom:1px solid var(--ghost);">What does he want on the other side of the open door that Meridian doesn't know about?</div>
+              <div style="padding:10px 0; border-bottom:1px solid var(--ghost);">How long has he known about Kairo — and did he engineer more than just the third test?</div>
+              <div style="padding:10px 0;">What is the mark on the back of his neck?</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- REYES -->
+    <section style="padding-top:4px; padding-bottom:80px;" id="reyes">
+      <div style="background:var(--surface); border:1px solid var(--border); border-left: 3px solid var(--dim); padding:60px;" class="fade-in">
+        <div style="display:flex; justify-content:space-between; align-items:flex-start; flex-wrap:wrap; gap:32px; margin-bottom:48px; padding-bottom:40px; border-bottom:1px solid var(--border);">
+          <div>
+            <div style="font-family:var(--font-mono); font-size:10px; letter-spacing:0.3em; color:var(--dim); margin-bottom:12px;">// SUPPORTING · CHAPTER 001-002 · ALLEGIANCE: UNCLEAR</div>
+            <h2 style="font-family:var(--font-display); font-size:72px; font-weight:800; text-transform:uppercase; line-height:1; color:#fff; margin-bottom:8px;">REYES</h2>
+            <div style="font-family:var(--font-mono); font-size:14px; letter-spacing:0.2em; color:var(--dim);">AGENCY OFFICER · MERIDIAN FIELD OPS</div>
+          </div>
+          <div style="text-align:right; font-family:var(--font-mono); font-size:11px; color:var(--dim); line-height:2;">
+            <div>AGE: 33</div>
+            <div>CLASS: NON-RESONANT (CONFIRMED)</div>
+            <div>ORIGIN: MERIDIAN FIELD OPERATIONS — 6 YR</div>
+            <div>STATUS: ACTIVE FIELD · OBSERVATION DETAIL</div>
+          </div>
+        </div>
+
+        <div style="display:grid; grid-template-columns:2fr 1fr; gap:60px; flex-wrap:wrap;">
+          <div>
+            <h3 style="font-family:var(--font-mono); font-size:10px; letter-spacing:0.3em; text-transform:uppercase; color:var(--dim); margin-bottom:20px; padding-bottom:8px; border-bottom:1px solid var(--ghost);">PROFILE</h3>
+            <p style="font-size:17px; font-weight:300; color:var(--pale); line-height:1.8; margin-bottom:24px;">
+              Six years with Meridian Field Operations. Not a Resonant — a baseline human who is very good at the logistical, procedural work that Resonant operations require: perimeter management, civilian containment, report filing, resource coordination. He has done his job well and without complaint. He has given the order to hold the line in four Ashfield sealing operations. He has used Meridian's language for what that means and tried not to think too hard about what it actually means.
+            </p>
+            <p style="font-size:17px; font-weight:300; color:var(--pale); line-height:1.8; margin-bottom:40px;">
+              The Void 9C operation cracked something. Not dramatically — Reyes isn't the type for dramatic internal crises. But watching a null-class diver walk into a critical inversion because nobody with actual power was going in, and then watching that same diver emerge with the situation resolved, carrying a person who had been living in the Void for two years — Reyes has been doing the math on that. He doesn't like where the math lands when he's honest about it. He's been a company man for six years. He's starting to wonder if that's the same thing as being a good man.
+            </p>
+
+            <h3 style="font-family:var(--font-mono); font-size:10px; letter-spacing:0.3em; text-transform:uppercase; color:var(--dim); margin-bottom:20px; padding-bottom:8px; border-bottom:1px solid var(--ghost);">NARRATIVE ROLE</h3>
+            <p style="font-size:17px; font-weight:300; color:var(--pale); line-height:1.8;">
+              Reyes is the moral mirror the story holds up to institutional complicity. He's not evil. He's not stupid. He made reasonable choices inside a system that was constructed to make its worst decisions look reasonable. He is currently on an observation detail for Vael that he accepted because refusing wasn't something the system gave him a framework for. The question Reyes represents across Season 1: at what point does the reasonable choice become the wrong one, and how many reasonable choices does it take to get there? His arc doesn't resolve cleanly. That's deliberate.
+            </p>
+          </div>
+          <div>
+            <h3 style="font-family:var(--font-mono); font-size:10px; letter-spacing:0.3em; text-transform:uppercase; color:var(--dim); margin-bottom:20px; padding-bottom:8px; border-bottom:1px solid var(--ghost);">CHARACTER METRICS</h3>
+            <div class="ds-stat-block">
+              <div class="stat-bar">
+                <div class="stat-label"><span>Institutional Loyalty</span><span>06/10</span></div>
+                <div class="stat-track"><div class="stat-fill white-fill" style="width:60%"></div></div>
+              </div>
+              <div class="stat-bar">
+                <div class="stat-label"><span>Personal Ethics</span><span>08/10</span></div>
+                <div class="stat-track"><div class="stat-fill white-fill" style="width:80%"></div></div>
+              </div>
+              <div class="stat-bar">
+                <div class="stat-label"><span>Willingness to Act</span><span>04/10</span></div>
+                <div class="stat-track"><div class="stat-fill white-fill" style="width:40%"></div></div>
+              </div>
+              <div class="stat-bar">
+                <div class="stat-label"><span>Threat Awareness</span><span>07/10</span></div>
+                <div class="stat-track"><div class="stat-fill white-fill" style="width:70%"></div></div>
+              </div>
+            </div>
+
+            <div style="background:var(--panel); border:1px solid var(--border); padding:20px; margin-top:32px;">
+              <div style="font-family:var(--font-mono); font-size:9px; color:var(--dim); margin-bottom:12px; letter-spacing:0.2em;">INTERNAL STATE — CH. 002</div>
+              <p style="font-size:14px; font-weight:300; color:var(--pale); font-style:italic; line-height:1.7;">"I have filed reports that described sixty thousand unregistered civilians as an 'exposure variable.' I used that language because it was in the template. I didn't write the template. I'm thinking about that a lot right now."</p>
+            </div>
+
+            <h3 style="font-family:var(--font-mono); font-size:10px; letter-spacing:0.3em; text-transform:uppercase; color:var(--dim); margin-bottom:20px; padding-bottom:8px; border-bottom:1px solid var(--ghost); margin-top:40px;">SIGNATURE LINES</h3>
+            <div style="display:flex; flex-direction:column; gap:8px;">
+              <div style="font-family:var(--font-body); font-style:italic; font-size:15px; color:var(--pale); padding:12px; border-left:2px solid var(--dim);">"Protocol dictates—" <em style="color:var(--dim); font-size:13px;">(he says this a lot. He's starting to hear how it sounds.)</em></div>
+              <div style="font-family:var(--font-body); font-style:italic; font-size:15px; color:var(--pale); padding:12px; border-left:2px solid var(--dim);">"He looked right at me before he came out. Knew exactly where I was standing. Null class doesn't do that."</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <footer>
       <div class="foot-brand">Null <span style="color:var(--echo-teal)">Threshold</span></div>
       <p>© 2025 Original IP — All rights reserved</p>
