--- a/design-sheets.html
+++ b/design-sheets.html
@@ -326,6 +326,166 @@
       </div>
     </section>
 
+    <!-- CH2 DIVIDER -->
+    <section style="padding-bottom:0; padding-top:60px;">
+      <div style="font-family:var(--font-mono); font-size:10px; letter-spacing:0.3em; color:var(--blood); margin-bottom:12px; display:flex; align-items:center; gap:12px;"><span style="color:var(--dim);">//</span> CHAPTER 002 — NEW CHARACTER DESIGN SHEETS</div>
+      <h2 style="font-family:var(--font-display); font-size:40px; font-weight:800; text-transform:uppercase; color:var(--dim); margin-bottom:0;">The Opposition</h2>
+    </section>
+
+    <!-- VAEL DESIGN SHEET -->
+    <section style="padding-top:16px;">
+      <div class="design-sheet fade-in" id="ds-vael">
+        <div class="ds-header">
+          <div>
+            <div style="font-family:var(--font-mono); font-size:10px; letter-spacing:0.3em; color:var(--blood); margin-bottom:12px;">DESIGN SHEET · DS-005</div>
+            <div class="ds-name" style="color:var(--blood);">VAEL</div>
+            <div class="ds-designation" style="color:var(--blood);">THE DIRECTOR · MERIDIAN FIELD OPS · CLASS: REDACTED</div>
+          </div>
+          <div style="text-align:right; font-family:var(--font-mono); font-size:10px; color:var(--dim); line-height:2.2;">
+            <div>AGE: 35 / HEIGHT: 6'1"</div>
+            <div>BUILD: LEAN · CONTROLLED · READS AS NON-THREAT</div>
+            <div>HAIR: BLACK · CLOSE-CUT · ALWAYS PRECISE</div>
+            <div>EYES: DARK · STILL · ALMOST NEVER BLINK AT NORMAL RATE</div>
+            <div>SKIN: DEEP BROWN · NECK MARK: AMBER GEOMETRIC — HIDDEN</div>
+          </div>
+        </div>
+
+        <div class="ds-grid">
+          <div class="ds-section">
+            <h4>Silhouette Design Brief</h4>
+            <p>Vael's design principle: he should never read as a villain on first viewing. He should read as the most competent person in any room — which he is. Lean build, precise movement, corporate attire that fits perfectly. The visual language of someone who controls environments rather than reacts to them.</p>
+            <p style="margin-top:12px;">The tell that something is wrong comes in stillness. Vael is <em>too</em> still. Not the stillness of someone calm — the stillness of something that has learned to perform calm so well it forgot to build in the small movements that make humans look human. He blinks slightly less than a normal person. He never fidgets. His hands are always placed deliberately. This should register as unsettling before the audience knows why.</p>
+            <p style="margin-top:12px;"><strong style="color:var(--blood);">Key design element:</strong> The neck mark — an amber-iridescent geometric pattern just above his collar line — should be nearly invisible in normal lighting and catch the light exactly once in Chapter 2 in a way the audience will rewatch.</p>
+          </div>
+
+          <div class="ds-section">
+            <h4>Costume — Base Design</h4>
+            <ul>
+              <li>Meridian Corp executive attire — not a uniform, a suit. Charcoal-black, impeccably fitted, no visible Meridian insignia (he's past the level where he needs to wear the brand)</li>
+              <li>No visible tech except a single personal tablet — not corporate-networked. Private. Always on his person.</li>
+              <li>High collar: always worn up or with a jacket that covers the neck mark. This is not accidental.</li>
+              <li>No weapons visible. This is not because he doesn't have them.</li>
+              <li>Shoes that don't make sound on any surface. Again, not accidental.</li>
+            </ul>
+
+            <h4 style="margin-top:28px;">Color Palette</h4>
+            <div style="display:flex; flex-direction:column; gap:8px; margin-top:12px;">
+              <div style="display:flex; align-items:center; gap:12px;">
+                <div style="width:32px; height:32px; background:#111318; border:1px solid var(--border); flex-shrink:0;"></div>
+                <span style="font-family:var(--font-mono); font-size:11px; color:var(--dim);">#111318 — Suit (near-void black)</span>
+              </div>
+              <div style="display:flex; align-items:center; gap:12px;">
+                <div style="width:32px; height:32px; background:#6b3a2a; border:1px solid var(--border); flex-shrink:0;"></div>
+                <span style="font-family:var(--font-mono); font-size:11px; color:var(--dim);">#6B3A2A — Skin (deep warm brown)</span>
+              </div>
+              <div style="display:flex; align-items:center; gap:12px;">
+                <div style="width:32px; height:32px; background:#1a1a1a; border:1px solid var(--border); flex-shrink:0;"></div>
+                <span style="font-family:var(--font-mono); font-size:11px; color:var(--dim);">#1A1A1A — Eyes (near-black, almost no iris visible)</span>
+              </div>
+              <div style="display:flex; align-items:center; gap:12px;">
+                <div style="width:32px; height:32px; background:#ffb93066; border:1px solid var(--border); flex-shrink:0;"></div>
+                <span style="font-family:var(--font-mono); font-size:11px; color:var(--dim);">#FFB93066 — Neck mark (amber, semi-transparent — hard to see)</span>
+              </div>
+            </div>
+          </div>
+
+          <div class="ds-section">
+            <h4>Animation Notes</h4>
+            <div style="display:flex; flex-direction:column; gap:12px; margin-top:8px;">
+              <div style="background:var(--panel); border:1px solid var(--border); padding:16px;">
+                <div style="font-family:var(--font-mono); font-size:9px; color:var(--blood); margin-bottom:8px; letter-spacing:0.2em;">MOVEMENT</div>
+                <p style="font-size:13px; font-weight:300; color:var(--pale); line-height:1.6;">Never hurries. Every movement purposeful, economical, slightly slower than the scene's emotional urgency demands. This should make audiences feel slightly off-rhythm in his scenes — like the tempo is wrong.</p>
+              </div>
+              <div style="background:var(--panel); border:1px solid var(--border); padding:16px;">
+                <div style="font-family:var(--font-mono); font-size:9px; color:var(--blood); margin-bottom:8px; letter-spacing:0.2em;">BLINK RATE</div>
+                <p style="font-size:13px; font-weight:300; color:var(--pale); line-height:1.6;">Approximately 60% of normal human blink frequency. Not robotic — just slightly wrong. Most viewers won't consciously register it. Their discomfort will register.</p>
+              </div>
+              <div style="background:var(--panel); border:1px solid var(--border); padding:16px;">
+                <div style="font-family:var(--font-mono); font-size:9px; color:var(--blood); margin-bottom:8px; letter-spacing:0.2em;">THE NECK MARK REVEAL</div>
+                <p style="font-size:13px; font-weight:300; color:var(--pale); line-height:1.6;">Chapter 2, single frame: low-angle shot as he looks down at his tablet. His collar shifts 2cm. The mark catches the operations center light for exactly one second. This is the only hint. Don't linger. Don't underscore it musically. Trust the audience.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- REYES DESIGN SHEET -->
+    <section style="padding-top:4px; padding-bottom:80px;">
+      <div class="design-sheet fade-in" id="ds-reyes">
+        <div class="ds-header">
+          <div>
+            <div style="font-family:var(--font-mono); font-size:10px; letter-spacing:0.3em; color:var(--dim); margin-bottom:12px;">DESIGN SHEET · DS-006</div>
+            <div class="ds-name" style="color:var(--dim);">REYES</div>
+            <div class="ds-designation" style="color:var(--dim);">AGENCY OFFICER · MERIDIAN FIELD OPS · NON-RESONANT</div>
+          </div>
+          <div style="text-align:right; font-family:var(--font-mono); font-size:10px; color:var(--dim); line-height:2.2;">
+            <div>AGE: 33 / HEIGHT: 5'11"</div>
+            <div>BUILD: AVERAGE · PRACTICAL · NOT MEMORABLE</div>
+            <div>HAIR: DARK BROWN · SHORT · FIELD-CUT</div>
+            <div>EYES: BROWN · EXPRESSIVE (HE TRIES TO HIDE THIS)</div>
+            <div>SKIN: MEDIUM OLIVE · FAINT SCAR: LEFT JAW (OLD)</div>
+          </div>
+        </div>
+
+        <div class="ds-grid">
+          <div class="ds-section">
+            <h4>Silhouette Design Brief</h4>
+            <p>Reyes is designed to be forgettable at first — and then, slowly, to become someone the audience can't stop watching. Average height, average build, nondescript Meridian field gear. He's supposed to be part of the institutional background. That's what makes his gradual emergence as an individual feel meaningful.</p>
+            <p style="margin-top:12px;">The key design element: his eyes betray him. Reyes has the face of someone trying to maintain professional composure and the eyes of someone losing the argument with themselves about whether they should. Every time we see him, the gap between his composed expression and his expressive eyes widens slightly. The audience tracks it before the other characters do.</p>
+          </div>
+
+          <div class="ds-section">
+            <h4>Costume — Base Design</h4>
+            <ul>
+              <li>Meridian Field Operations standard kit — well-maintained, correctly worn. He follows dress code.</li>
+              <li>Off-duty (Chapter 2 surveillance): civilian clothes that look like a Field Officer trying to look like a civilian. Close, but not quite right. Kairo clocks it immediately.</li>
+              <li>Badge on inside of jacket, not outside. Force of habit.</li>
+              <li>One personal item visible: a worn photograph tucked in his front chest pocket. Never identified. Never explained. Always there.</li>
+            </ul>
+
+            <h4 style="margin-top:28px;">Color Palette</h4>
+            <div style="display:flex; flex-direction:column; gap:8px; margin-top:12px;">
+              <div style="display:flex; align-items:center; gap:12px;">
+                <div style="width:32px; height:32px; background:#2a3040; border:1px solid var(--border); flex-shrink:0;"></div>
+                <span style="font-family:var(--font-mono); font-size:11px; color:var(--dim);">#2A3040 — Field kit (muted corporate blue-grey)</span>
+              </div>
+              <div style="display:flex; align-items:center; gap:12px;">
+                <div style="width:32px; height:32px; background:#c4955a; border:1px solid var(--border); flex-shrink:0;"></div>
+                <span style="font-family:var(--font-mono); font-size:11px; color:var(--dim);">#C4955A — Skin (medium olive warm)</span>
+              </div>
+              <div style="display:flex; align-items:center; gap:12px;">
+                <div style="width:32px; height:32px; background:#6b4a2a; border:1px solid var(--border); flex-shrink:0;"></div>
+                <span style="font-family:var(--font-mono); font-size:11px; color:var(--dim);">#6B4A2A — Eyes (warm dark brown)</span>
+              </div>
+              <div style="display:flex; align-items:center; gap:12px;">
+                <div style="width:32px; height:32px; background:#e8d4a0; border:1px solid var(--border); flex-shrink:0;"></div>
+                <span style="font-family:var(--font-mono); font-size:11px; color:var(--dim);">#E8D4A0 — Photograph paper (worn, yellowing)</span>
+              </div>
+            </div>
+          </div>
+
+          <div class="ds-section">
+            <h4>Animation Notes</h4>
+            <div style="display:flex; flex-direction:column; gap:12px; margin-top:8px;">
+              <div style="background:var(--panel); border:1px solid var(--border); padding:16px;">
+                <div style="font-family:var(--font-mono); font-size:9px; color:var(--dim); margin-bottom:8px; letter-spacing:0.2em;">EYES VS FACE</div>
+                <p style="font-size:13px; font-weight:300; color:var(--pale); line-height:1.6;">The key acting challenge for Reyes in every scene: his face says "professional following protocol." His eyes say "I'm not sure about this anymore." The dissonance should grow across episodes.</p>
+              </div>
+              <div style="background:var(--panel); border:1px solid var(--border); padding:16px;">
+                <div style="font-family:var(--font-mono); font-size:9px; color:var(--dim); margin-bottom:8px; letter-spacing:0.2em;">THE PHOTOGRAPH</div>
+                <p style="font-size:13px; font-weight:300; color:var(--pale); line-height:1.6;">Never show it clearly. It's visible in his chest pocket in every scene but always partially obscured. This is intentional mystery. It's load-bearing for a later arc. Don't resolve it in Season 1.</p>
+              </div>
+              <div style="background:var(--panel); border:1px solid var(--border); padding:16px;">
+                <div style="font-family:var(--font-mono); font-size:9px; color:var(--dim); margin-bottom:8px; letter-spacing:0.2em;">KAIRO INTERACTION</div>
+                <p style="font-size:13px; font-weight:300; color:var(--pale); line-height:1.6;">Whenever Reyes is in a scene with Kairo, Reyes should appear slightly more self-conscious than usual — Kairo's calm makes Reyes's institutional performance feel more visible, including to Reyes himself.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <div class="divider"></div>
     <footer>
       <div class="foot-brand">Null <span style="color:var(--echo-teal)">Threshold</span></div>
