--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
         <a href="chapters.html#ch02" class="chapter-item">
           <span class="ch-num">CH. 002</span>
           <span class="ch-title">Overclock</span>
-          <span class="ch-desc">Corporate asset Seya Cross goes AWOL. Her handler has eight minutes before they send the retrieval team.</span>
-          <span class="ch-status coming">Coming Soon</span>
+          <span class="ch-desc">Luca drops the bomb. Vael watches from the shadows. And Orin says something that changes everything.</span>
+          <span class="ch-status available">Available</span>
         </a>
         <a href="chapters.html#ch03" class="chapter-item">
           <span class="ch-num">CH. 003</span>
